criacao da base de dados

--- a/EmprestimosLivros/appsettings.json
+++ b/EmprestimosLivros/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnection": "server=PAULO\\SQLEXPRESS; Database=Emprestimos; trusted_connection=true; TrustServerCertificate=True"
+  },
   "AllowedHosts": "*"
 }
